--- a/app/assets/stylesheets/jobs.css.scss
+++ b/app/assets/stylesheets/jobs.css.scss
@@ -18,7 +18,7 @@ li.job {
 
 .pull-right a.btn { margin-top: 3px; margin-right: 16px; }
 .task-list-holder { width: 24%; }
-.task-list { min-width: 200px; }
+.task-list { min-width: 200px; margin-top: 7px; }
 .job-list { min-width: 300px; float: left;
 	ul { padding-left: 7px; }
 }
