--- a/app/views/contacts/edit.html.haml
+++ b/app/views/contacts/edit.html.haml
@@ -4,6 +4,6 @@
 	Editing contact
 	= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-eye-open'></span></button>".html_safe, @contact, :title => "Show contact"
 
-= link_to '<< Index', contacts_path
+= link_to '<< All Contacts', contacts_path
 
 = render 'form'
