Fix date comparinon in task model.

--- a/app/views/shared/_checkboxes.html.haml
+++ b/app/views/shared/_checkboxes.html.haml
@@ -15,7 +15,7 @@
 	- else
 		.checkbox
 			%label
-				= check_box :task, :omplete_date, :onclick => "complete_party( #{task.id}, '' );", :checked => task.task_complete?
+				= check_box :task, :complete_date, :onclick => "complete_party( #{task.id}, '' );", :checked => task.task_complete?
 				Complete
 
 :javascript
