Corrected relational links between job and contact(ish) and added job_id to task form when present

--- a/app/views/contacts/jobs.html.haml
+++ b/app/views/contacts/jobs.html.haml
@@ -18,7 +18,7 @@
 
 %h2 As a Mediator
 %ul
-	- @contact.mediator.each do |a|
+	- @contact.mediator0.each do |a|
 		%li= link_to a.ref, a
 	- @contact.mediator1.each do |b|
 		%li= link_to b.ref, b
